@@ -1,5 +1,5 @@
 /*
- * Copyright 2003,2004,2006 Red Hat, Inc.
+ * Copyright 2003,2004,2006,2011 Red Hat, Inc.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -46,6 +46,15 @@
 
 #ifdef HAVE_SECURITY_PAM_MODULES_H
 #include <security/pam_modules.h>
+#endif
+
+#include KRB5_H
+#ifdef USE_KRB4
+#include KRB4_DES_H
+#include KRB4_KRB_H
+#ifdef KRB4_KRB_ERR_H
+#include KRB4_KRB_ERR_H
+#endif
 #endif
 
 #include "conv.h"
@@ -96,6 +105,14 @@ debug(const char *fmt, ...)
 
 	va_end(args);
 }
+
+#ifdef HAVE_KRB5_SET_TRACE_CALLBACK
+void
+trace(krb5_context ctx, const struct krb5_trace_info *info, void *data)
+{
+	debug("libkrb5 trace message: %s", info->message);
+}
+#endif
 
 void
 warn(const char *fmt, ...)
